# Yara-Alsardi-protfolio

./: .replit  LICENSE  README.md  app.py  database.py  pyproject.toml  requirements.txt
templates/: banner.html  bootstrap.html  contactme.html  home.html  messag_submitted.html  myproject.html  projectdetails.html
